name:                retry

description:

        This package exposes combinators that can wrap arbitrary
        monadic actions. They run the action and potentially retry
        running it with some configurable delay for a configurable
        number of times.

        The purpose is to make it easier to work with IO and
        especially network IO actions that often experience temporary
        failure and warrant retrying of the original action. For
        example, a database query may time out for a while, in which
        case we should hang back for a bit and retry the query instead
        of simply raising an exception.

version:             0.7.5.1
synopsis:            Retry combinators for monadic actions that may fail
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Ozgun Ataman, Soostone Inc
category:            Control
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://github.com/Soostone/retry
extra-source-files:
  README.md
  changelog.md

library
  exposed-modules:     Control.Retry
  build-depends:
      base                 >= 4.6 && < 5
    , data-default-class
    , exceptions           >= 0.5 && < 0.9
    , ghc-prim             < 0.6
    , random               >= 1 && < 1.2
    , transformers         < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test
    type:           exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: test,src
    ghc-options:    -threaded
    build-depends:
        base              ==4.*
      , exceptions
      , transformers
      , data-default-class
      , random
      , time
      , QuickCheck         >= 2.7 && < 2.11
      , HUnit              >= 1.2.5.2 && < 1.7
      , hspec              >= 1.9
      , stm
      , ghc-prim
      , mtl
    default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/Soostone/retry.git
