name:                retry

description:

        This package exposes combinators that can wrap arbitrary
        monadic actions. They run the action and potentially retry
        running it with some configurable delay for a configurable
        number of times.

        The purpose is to make it easier to work with IO and
        especially network IO actions that often experience temporary
        failure and warrant retrying of the original action. For
        example, a database query may time out for a while, in which
        case we should hang back for a bit and retry the query instead
        of simply raising an exception.

version:             0.9.1.0
synopsis:            Retry combinators for monadic actions that may fail
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Ozgun Ataman, Soostone Inc
category:            Control
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://github.com/Soostone/retry
extra-source-files:
  README.md
  changelog.md

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:     Control.Retry
  build-depends:
      base                 >= 4.8 && < 5
    , exceptions           >= 0.5
    , ghc-prim
    , random               >= 1
    , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite test
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test,src
    ghc-options:    -threaded
    other-modules:  Control.Retry
                    Tests.Control.Retry
    build-depends:
        base              ==4.*
      , exceptions
      , transformers
      , random
      , time
      , HUnit              >= 1.2.5.2
      , tasty
      , tasty-hunit
      , tasty-hedgehog
      , hedgehog
      , stm
      , ghc-prim
      , mtl
    default-language: Haskell2010

    if flag(lib-Werror)
      ghc-options: -Werror

    ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/Soostone/retry.git
